fixed unreadable text

--- a/main.css
+++ b/main.css
@@ -1,6 +1,10 @@
 body {
     background: var(--bs-dark);
 }
+.text-info {
+    margin: 25px;
+    padding: 25px;
+}
 .spinner-border {
     width: 10rem;
     height: 10rem;
